---
source: crates/pixi-build-rust/src/main.rs
expression: generated_recipe.recipe
---
context: {}
package:
  name: foobar
  version: 0.1.0
source: []
build:
  number: ~
  script:
    content: "[ ... script ... ]"
    env:
      SCCACHE_BUCKET: my-bucket
    secrets:
      - SCCACHE_SYSTEM
requirements:
  build:
    - "${{ compiler('rust') }}"
    - sccache
  host: []
  run: []
  run_constraints: []
tests: []
about:
  homepage: ~
  license: ~
  summary: ~
  description: ~
  documentation: ~
  repository: ~
extra: ~
